tests/integrations/basic-fail/Cargo.stderr
   Compiler flags: ["--error-format=json", "--edition=2021"]
   Building test dependencies...
tests/actual_tests/bad_pattern.rs ... FAILED
tests/actual_tests/exit_code_fail.rs ... FAILED
tests/actual_tests/filters.rs ... FAILED
tests/actual_tests/foomp.rs ... FAILED

tests/actual_tests/bad_pattern.rs FAILED:
command: "rustc" "--out-dir" "$TMP "--error-format=json" "--edition=2021" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/debug" "-L" "$DIR/$DIR/../../../target/debug" "tests/actual_tests/bad_pattern.rs"

substring `miesmätsched types` not found in stderr output
expected because of pattern here: tests/actual_tests/bad_pattern.rs:5

There were 1 unmatched diagnostics at tests/actual_tests/bad_pattern.rs:4
    Error: mismatched types

full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests/bad_pattern.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/$DIR/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.



tests/actual_tests/exit_code_fail.rs FAILED:
command: "rustc" "--out-dir" "$TMP "--error-format=json" "--edition=2021" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/debug" "-L" "$DIR/$DIR/../../../target/debug" "tests/actual_tests/exit_code_fail.rs"

fail test got exit status: 0, but expected 1

no error patterns found in fail test

full stderr:



tests/actual_tests/filters.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests/filters.rs:1 because invalid condition `"x86_64"`, expected `on-host`, /[0-9]+bit/, /host-.*/, or /target-.*/

full stderr:



tests/actual_tests/foomp.rs FAILED:
command: "rustc" "--out-dir" "$TMP "--error-format=json" "--edition=2021" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/debug" "-L" "$DIR/$DIR/../../../target/debug" "tests/actual_tests/foomp.rs"

actual output differed from expected
--- tests/actual_tests/foomp.stderr
+++ <stderr output>
... 3 lines skipped ...
 4 |     add("42", 3);
   |     --- ^^^^ expected `usize`, found `&str`
+  |     |
+  |     arguments to this function are incorrect
   |
 note: function defined here
~ --> $DIR/$DIR/src/lib.rs:1:8
   |
 1 | pub fn add(left: usize, right: usize) -> usize {
~  |        ^^^ some expected text that isn't in the actual message░
 
-error: aborting doo to previous error
+error: aborting due to previous error
 
 For more information about this error, try `rustc --explain E0308`.
 


full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests/foomp.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/$DIR/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.


FAILURES:
    tests/actual_tests/bad_pattern.rs
    tests/actual_tests/exit_code_fail.rs
    tests/actual_tests/filters.rs
    tests/actual_tests/foomp.rs

test result: FAIL. 4 tests failed, 0 tests passed, 0 ignored, 0 filtered out
error: test failed, to rerun pass `--test ui_tests`

Caused by:
  process didn't exit successfully: `$DIR/target/debug/ui_tests-HASH --test-threads 1` (exit status: 1)
   Compiler flags: ["--error-format=json", "--edition=2021"]
   Building test dependencies...
tests/actual_tests_bless/foomp-rustfix-fail.rs ... FAILED
tests/actual_tests_bless/foomp_aux.rs ... ok
tests/actual_tests_bless/revised_revision.rs ... FAILED
tests/actual_tests_bless/revisions.rs (foo) ... ok
tests/actual_tests_bless/revisions.rs (bar) ... ok
tests/actual_tests_bless/revisions_bad.rs (foo) ... ok
tests/actual_tests_bless/revisions_bad.rs (bar) ... FAILED
tests/actual_tests_bless/revisions_filter.rs (foo) ... ignored (in-test comment)
tests/actual_tests_bless/revisions_filter.rs (bar) ... ignored (in-test comment)
tests/actual_tests_bless/revisions_filter2.rs (foo) ... ignored (in-test comment)
tests/actual_tests_bless/revisions_filter2.rs (bar) ... ok
tests/actual_tests_bless/revisions_multiple_per_annotation.rs (foo) ... ok
tests/actual_tests_bless/revisions_multiple_per_annotation.rs (bar) ... ok
tests/actual_tests_bless/revisions_same_everywhere.rs (foo) ... ok
tests/actual_tests_bless/revisions_same_everywhere.rs (bar) ... ok

tests/actual_tests_bless/foomp-rustfix-fail.rs FAILED:
command: "rustc" "--out-dir" "$TMP "--error-format=json" "--edition=2021" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/debug" "-L" "$DIR/$DIR/../../../target/debug" "tests/actual_tests_bless/foomp-rustfix-fail.rs"

rustfix failed with exit status: 1:
error[E0308]: mismatched types
 --> tests/actual_tests_bless/foomp-rustfix-fail.fixed:5:21
  |
5 |     let x: String = 42;
  |            ------   ^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected struct `String`, found integer
  |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.

full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests_bless/foomp-rustfix-fail.rs:5:21
  |
5 |     let x: String = 42;
  |            ------   ^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected struct `String`, found integer
  |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.



tests/actual_tests_bless/revised_revision.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests_bless/revised_revision.rs:2 because cannot declare revisions under a revision

full stderr:



tests/actual_tests_bless/revisions_bad.rs (revision `bar`) FAILED:
command: "rustc" "--out-dir" "$TMP "--error-format=json" "--edition=2021" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/debug" "-L" "$DIR/$DIR/../../../target/debug" "tests/actual_tests_bless/revisions_bad.rs" "--cfg=bar"

substring ``main` function not found in crate `revisions_bad`` not found in stderr output
expected because of pattern here: tests/actual_tests_bless/revisions_bad.rs:4

There were 1 unmatched diagnostics at tests/actual_tests_bless/revisions_bad.rs:10
    Error: `main` function not found in crate `revisions_bad`

full stderr:
error[E0601]: `main` function not found in crate `revisions_bad`
  --> tests/actual_tests_bless/revisions_bad.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `tests/actual_tests_bless/revisions_bad.rs`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.


FAILURES:
    tests/actual_tests_bless/foomp-rustfix-fail.rs
    tests/actual_tests_bless/revised_revision.rs
    tests/actual_tests_bless/revisions_bad.rs

test result: FAIL. 3 tests failed, 9 tests passed, 3 ignored, 0 filtered out
error: test failed, to rerun pass `--test ui_tests_bless`

Caused by:
  process didn't exit successfully: `$DIR/target/debug/ui_tests_bless-HASH --test-threads 1` (exit status: 1)
   Compiler flags: []
thread 'main' panicked at '
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: test failed, to rerun pass `--test ui_tests_invalid_program`
   Compiler flags: []
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/bad_pattern.rs"', $DIR/src/lib.rs
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
tests/actual_tests/bad_pattern.rs ... FAILED
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/exit_code_fail.rs"', $DIR/src/lib.rs
tests/actual_tests/exit_code_fail.rs ... FAILED
tests/actual_tests/filters.rs ... FAILED
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/foomp.rs"', $DIR/src/lib.rs
tests/actual_tests/foomp.rs ... FAILED

tests/actual_tests/bad_pattern.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/bad_pattern.rs"

full stderr:



tests/actual_tests/exit_code_fail.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/exit_code_fail.rs"

full stderr:



tests/actual_tests/filters.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests/filters.rs:1 because invalid condition `"x86_64"`, expected `on-host`, /[0-9]+bit/, /host-.*/, or /target-.*/

full stderr:



tests/actual_tests/foomp.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/foomp.rs"

full stderr:


FAILURES:
    tests/actual_tests/bad_pattern.rs
    tests/actual_tests/exit_code_fail.rs
    tests/actual_tests/filters.rs
    tests/actual_tests/foomp.rs

test result: FAIL. 4 tests failed, 0 tests passed, 0 ignored, 0 filtered out
error: test failed, to rerun pass `--test ui_tests_invalid_program2`

Caused by:
  process didn't exit successfully: `$DIR/target/debug/ui_tests_invalid_program2-HASH --test-threads 1` (exit status: 1)
error: 4 targets failed:
    `--test ui_tests`
    `--test ui_tests_bless`
    `--test ui_tests_invalid_program`
    `--test ui_tests_invalid_program2`
